scrollbar solved

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -18,3 +18,7 @@ textarea:focus, input:focus, select:focus {
 button {
     transition: background-color 0.3s, transform 0.2s;
 }
+
+html {
+  overflow-y: scroll;
+}
